<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.mycompany</groupId>
    <artifactId>AsztalFoglaloSwing</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>
    <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>2.3.2</version>
        <configuration>
          <archive>
            <manifest>
              <addClasspath>true</addClasspath>
              <mainClass>asztalFoglaloSwing.AsztalFoglaloMainFrame</mainClass>
            </manifest>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>2.4</version>
        <configuration>
            <descriptorRefs>
                <descriptorRef>jar-with-dependencies</descriptorRef>
            </descriptorRefs>
            <archive>
                <manifest>
                    <mainClass>asztalFoglaloSwing.AsztalFoglaloMainFrame</mainClass>
                </manifest>
            </archive>
        </configuration>
        <executions>
            <execution>
                <id>make-assembly</id>
                <phase>package</phase>
                <goals>
                    <goal>single</goal>
                </goals>
            </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
    <dependencies>
        
        <!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <version>8.3.0</version>
        </dependency>

        
        <!-- https://mvnrepository.com/artifact/com.itextpdf/itextpdf -->
        <dependency>         
            <groupId>com.itextpdf</groupId>         
            <artifactId>kernel</artifactId>         
            <version>7.0.2</version>     
        </dependency>  

        <dependency>         
           <groupId>com.itextpdf</groupId>         
           <artifactId>io</artifactId>         
           <version>7.0.2</version>     
        </dependency>  

        <dependency>         
           <groupId>com.itextpdf</groupId>         
           <artifactId>layout</artifactId>         
           <version>7.0.2</version>
        </dependency>
        <dependency>         
         <groupId>com.itextpdf</groupId>         
         <artifactId>forms</artifactId>         
         <version>7.0.2</version>    
        </dependency>  

        <dependency>         
           <groupId>com.itextpdf</groupId>         
           <artifactId>pdfa</artifactId>         
           <version>7.0.2</version>     
        </dependency>  

        <dependency>         
           <groupId>com.itextpdf</groupId>         
           <artifactId>sign</artifactId>         
           <version>7.0.2</version>     
        </dependency>  

        <dependency>         
           <groupId>com.itextpdf</groupId>         
           <artifactId>barcodes</artifactId>         
           <version>7.0.2</version>     
        </dependency>  

        <dependency>         
           <groupId>com.itextpdf</groupId>         
           <artifactId>font-asian</artifactId>         
           <version>7.0.2</version>     
        </dependency>  

        <dependency>         
           <groupId>com.itextpdf</groupId>         
           <artifactId>hyph</artifactId>         
           <version>7.0.2</version>    
        </dependency> 
      <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>1.7.13</version>
        </dependency>

    </dependencies>
</project>